@@ -56,6 +56,7 @@ struct grub_terminfo_output_state
   void (*put) (struct grub_term_output *term, const int c);
 };
 
+grub_err_t EXPORT_FUNC(grub_terminfo_output_init) (struct grub_term_output *term);
 void EXPORT_FUNC(grub_terminfo_gotoxy) (grub_term_output_t term,
 					grub_uint8_t x, grub_uint8_t y);
 void EXPORT_FUNC(grub_terminfo_cls) (grub_term_output_t term);
